snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.jar.sha512
390f77ced1add4fe7492dc07b7281f1c9952050e37c162f4c324cd44341828854d384b7af9565ba52b7a8084dbb9caf9d477b4351719a43163102d62c48bd991